chore: inventory css created

--- a/src/assets/styles/all.scss
+++ b/src/assets/styles/all.scss
@@ -1,4 +1,9 @@
 @import "fonts";
 @import "normalize";
+@import "typography";
+@import "layout";
 @import "supplyItem";
-@import "suppliesWrapper";
+@import "supplies";
+@import "inventory";
+@import "inventoryCell";
+@import "keyframes";
