chore: sass minor refactorings

--- a/src/assets/styles/features/_inventory.scss
+++ b/src/assets/styles/features/_inventory.scss
@@ -5,7 +5,7 @@
   font-size: 18px;
   text-align: center;
 
-  .inventory_cells {
+  .inventory_content {
     display: grid;
     grid-template-columns: repeat(17, 1fr);
     grid-template-rows: repeat(6, 100px);
