--- a/src/assets/styles/components/_inventoryCell.scss
+++ b/src/assets/styles/components/_inventoryCell.scss
@@ -3,4 +3,8 @@
   height: 100%;
   background-color: #fff;
   border-radius: 2px;
+
+  &-highlighted {
+    animation: highlighting 500ms infinite alternate ease-out;
+  }
 }
