chore: add inventory method created, inventory state added

--- a/src/assets/styles/_keyframes.scss
+++ b/src/assets/styles/_keyframes.scss
@@ -20,3 +20,11 @@
     opacity: 1;
   }
 }
+
+@keyframes highlighting {
+  from {
+    background-color: #4fc04f;
+  } to {
+    background-color: transparent;
+  }
+}
