--- a/src/assets/styles/all.scss
+++ b/src/assets/styles/all.scss
@@ -2,8 +2,6 @@
 @import "normalize";
 @import "typography";
 @import "layout";
-@import "supplyItem";
-@import "supplies";
-@import "inventory";
-@import "inventoryCell";
+@import "components";
+@import "features";
 @import "keyframes";
