chore: made inventory size customizable, validation for custom item size added, minor refactorings

--- a/src/assets/styles/_keyframes.scss
+++ b/src/assets/styles/_keyframes.scss
@@ -25,6 +25,14 @@
   from {
     background-color: #4fc04f;
   } to {
-    background-color: transparent;
+    background-color: #fff;
+  }
+}
+
+@keyframes dropArrow {
+  from {
+    transform: translateX(-50%) translateY(-50%);
+  } to {
+    transform: translateX(-50%) translateY(-60%);
   }
 }
