--- a/src/assets/styles/components/_inventoryCell.scss
+++ b/src/assets/styles/components/_inventoryCell.scss
@@ -1,10 +1,34 @@
 .inventory_cell {
+  position: relative;
   width: 100%;
   height: 100%;
   background-color: #fff;
-  border-radius: 2px;
+  outline: 1px dashed #000;
 
   &-highlighted {
-    animation: highlighting 500ms infinite alternate ease-out;
+    animation: highlighting 400ms infinite alternate ease-out;
+    &:before {
+      position: absolute;
+      content: "";
+      top: 50%;
+      left: 50%;
+      width: 20%;
+      height: 50px;
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-image: url('../../img/arrow-down.png');
+      animation: dropArrow 400ms infinite alternate;
+    }
+  }
+
+  .supply_item {
+    width: var(--width, 100%);
+    height: var(--height, 100%);
+    position: absolute;
+    top:0;
+    left:0;
+    z-index: 1;
+    font-size: 18px;
+    border: 2px solid #000;
   }
 }
