--- a/src/assets/styles/features/_inventory.scss
+++ b/src/assets/styles/features/_inventory.scss
@@ -7,11 +7,10 @@
 
   .inventory_content {
     display: grid;
-    grid-template-columns: repeat(17, 1fr);
-    grid-template-rows: repeat(6, 100px);
-    grid-gap: 4px;
+    grid-template-columns: repeat(var(--cols, 17), 1fr);
+    grid-template-rows: repeat(var(--rows, 6), 100px);
     border-radius: 4px;
-    border: 4px solid #000;
+    border: 2px solid #000;
     background-color: #000;
   }
 }
