--- a/src/assets/styles/features/_supplies.scss
+++ b/src/assets/styles/features/_supplies.scss
@@ -9,8 +9,11 @@
   }
 
   .supplies_list {
-    padding: 8px 0;
+    padding: 8px;
     border: 2px solid #000;
     border-radius: 4px;
+    &:empty {
+      display: none;
+    }
   }
 }
