--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -1,2 +1,4 @@
 // - - - - - - - Titillium Web
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,400;0,600;1,200;1,400;1,600&display=swap');
+// - - - - - - - Icon Font
+@import "../fonts/iconFont/style.css";
