--- a/src/assets/styles/all.scss
+++ b/src/assets/styles/all.scss
@@ -1,7 +1,9 @@
 @import "fonts";
 @import "normalize";
+@import "variables";
 @import "typography";
 @import "layout";
 @import "components";
 @import "features";
 @import "keyframes";
+@import "responsive";
