fix: minor css fixed

--- a/src/assets/styles/components/_inventoryCell.scss
+++ b/src/assets/styles/components/_inventoryCell.scss
@@ -17,6 +17,7 @@
       height: 50px;
       background-size: contain;
       background-repeat: no-repeat;
+      background-position: center;
       background-image: url('../../img/arrow-down.png');
       animation: dropArrow 400ms infinite alternate;
     }
